scss/_home.scss
.tt-home__slider,
.tt-home__slide__wrap,
.tt-home__slide,
.tt-home__cards,
.tt-home__card__cont {
  height: 100%;
}

.tt-home {
  background-color: black;
  color: white;

  .slick-track,
  .slick-list {
    height: 100%;
  }
}

.tt-home__slider {
  visibility: hidden;
  overflow: hidden;
}

.tt-home__slide {
  display: block;

  .container-fluid {
    height: 100%;

    .row {
      height: 100%;
    }
  }

  .tt-social {
    li {
      opacity: 0;
    }
  }
}

.tt-home__header {
  display: flex;
  justify-content: center;

  h1 {
    margin: 0;
    padding: 0 15px;
    color: $tt-blue;
    opacity: 0;
    display: initial;
    font-weight: 400;
    animation: fadeIn 2s forwards;
  }
}

.tt-home__slide__wrap {
  background-color: $tt-black-transp;
  color: white;
}

.tt-home__mission {
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;

  .tt-home__slide__wrap {
    &:after {
      content: "Mission";
      width: 0;
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      color: $tt-white-transp;
      font-family: $watermark-font-family;
      font-size: 4em;
      word-wrap: break-word;
    }
  }
}

.tt-home__mission__cont {
  padding: 50px 30px 85px 65px;
  display: flex;
  flex-direction: column;
  justify-content: center;

  @media (min-width: 768px) {
    padding-left: 90px;
    padding-right: 40px;
  }
}

.tt-home__mission__header,
.tt-home__mission__footer {
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 0;
}

.tt-home__header--underline {
  display: block;
  position: relative;

  &:before {
    content: "";
    width: 30%;
    margin-top: -5px;
    border-bottom: solid 2px $tt-blue;
    position: absolute;
  }

  &:after {
    content: "";
    width: 15%;
    margin-bottom: -5px;
    border-bottom: dotted 4px $tt-blue;
    position: absolute;
    left: 0;
    bottom: 0;
  }
}

.tt-home__card {
  width: 100%;
  position: relative;
  overflow: hidden;
  background-size: auto 100%;
  background-position: center;
  background-repeat: no-repeat;
  transition: all 0.5s;
  z-index: 0;

  &:before {
    content: "";
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background-color: transparentize($tt-black-transp, 0.1);
    opacity: 1;
    transition: opacity 0.2s ease-out;
  }

  @media (min-width: 1025px) {
    &:hover {
      background-size: auto 120%;
    }
  }

  @media (min-width: 1025px) {
    .tt-home__card__body,
    .tt-home__card__footer {
      opacity: 0;
    }
    &:before {
      opacity: 0;
    }
    &:hover {
      &:before,
      .tt-home__card__body,
      .tt-home__card__footer {
        opacity: 1;
      }
    }
  }
}

.tt-home__card__cont {
  padding: 50px 50px 85px 50px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  text-align: center;

  @media (max-width: 992px) {
    z-index: 39;
  }
}

.tt-home__card__logo-wrapper {
  width: 100%;
  margin-bottom: 20px;
  z-index: 1;
}

.tt-home__card__logo {
  width: 100%;
  height: 0;
  padding-bottom: 19%;
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

.tt-home__card__logo-wrapper,
.tt-home__card__footer {
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 0;
}

.tt-home__card__body {
  margin: 0 25px;
}

.tt-home__orbit {
  width: 100%;
  height: 35%;
  position: absolute;
  bottom: 0;
  opacity: 0;
  background-size: cover;
  background-position: top center;
  background-repeat: no-repeat;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
}

.tt-logo__cont {
  width: 100%;
  position: absolute;
  left: 50%;
  top: 30%;
  transition: all 0.3s ease-in;
  opacity: 0;
  transform: translate(-50%, -30%);
}

.tt-logo__wrap {
  padding-bottom: 32%;
  position: relative;
  height: 0;
  width: 100%;
  padding: 0;
  padding-bottom: 100%;
}

.tt-logo {
  position: absolute;
  height: 100%;
  width: 100%;
  left: 0;
  bottom: 0;
}

.tt-logo__sun {
  transform-origin: 283.25px 40px;
}

.tt-logo__sun--first {
  fill: $tt-orange;
}

.tt-logo__sun--second {
  fill: $tt-pink;
}

.tt-logo__border {
  fill: none;
  stroke: white;
  stroke-miterlimit: 10;
  stroke-width: 4.3px;
}

.tt-logo__border,
.tt-logo__border--left,
.tt-logo__border--right {
  stroke-dasharray: 1000;
  stroke-dashoffset: 1000;
}

.tt-logo__title--main,
.tt-logo__title--sub {
  fill: white;
}

.tt-logo__title--sub {
  opacity: 0;
}

.last-slide {
  .tt-home__orbit,
  .tt-logo__cont {
    opacity: 1;
  }
}

.last-slide {
  .tt-logo__sun {
    animation: rotate 2s 2;
  }

  .tt-logo__title--sub {
    animation: show-title-sub 1s 5.9s forwards;
  }

  .tt-logo__border--left {
    animation: draw 4s ease-in-out 4s forwards;
  }

  .tt-logo__border--right {
    animation: draw 3.9s ease-in-out 3.9s forwards;
  }

  .tt-logo__title--main {
    animation: show-title-main 4s forwards;
  }

  $delay: 7.1s;

  @for $i from 1 to 5 {
    .tt-social li:nth-child(#{$i}) {
      animation: fadeIn 2s $delay forwards;
    }

    $delay: $delay + 0.7;
  }

  .tt-home__orbit {
    animation: slideUp 15s ease;
  }
}

@include keyframes-compatible(fadeIn) {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@include keyframes-compatible(rotate) {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@include keyframes-compatible(show-title-sub) {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@include keyframes-compatible(draw) {
  0% {
    stroke-dashoffset: 1000;
  }
  100% {
    stroke-dashoffset: 0;
  }
}

@include keyframes-compatible(show-title-main) {
  0% {
    opacity: 0;
  }
  50% {
    opacity: 0.5;
  }
  100% {
    opacity: 1;
  }
}

@include keyframes-compatible(slideUp) {
  from {
    transform: translateY(100%);
  }
  to {
    transform: translateY(0%);
  }
}

